Change File Name

--- a/HTML-CSS/landing.html
+++ b/HTML-CSS/landing.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="home.css">
-    <title>Home</title>
+    <link rel="stylesheet" href="landing.css">
+    <title>Landing Page</title>
 </head>
 <body>
-    Home
+    <!-- Landing Page -->
 </body>
 </html>
