--- a/HTML-CSS/watching-page.html
+++ b/HTML-CSS/watching-page.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="enroll-now.css">
-    <title>Enroll Now</title>
+    <link rel="stylesheet" href="watching-page.css">
+    <title>Watching Page</title>
 </head>
 <body>
-    <!-- Enroll Now -->
+    <!-- Watching page -->
 </body>
 </html>
