--- a/HTML-CSS/with-account.html
+++ b/HTML-CSS/with-account.html
@@ -4,10 +4,188 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="with-account.css">
     <title>With Account</title>
+    <style>
+        #first-row {
+            height: 33rem;
+        }
+    </style>
 </head>
 <body>
     <!-- Landing page(with ACCOUNT) -->
+    <header>
+        <!-- NAVBAR -->
+        <nav class="navbar bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand">Navbar</a>
+              <div class="d-flex">
+                    <div class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <img src="/Images/me nobg.png" alt="account-pic" height="30" width="30">
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">My Account</a>
+                            <a class="dropdown-item" href="with-acc2.html">MY LIST</a>
+                            <a class="dropdown-item" href="#">Downloads</a>
+                            <a class="dropdown-item" href="#">Settings</a>
+                            <a class="dropdown-item" href="#">Log Out</a>
+                        </div>
+                    </div> &nbsp; &nbsp;
+                    <a class="nav-link" href="#">Home</a> &nbsp; &nbsp;
+                    <a class="nav-link" href="#">Watch List</a> &nbsp; &nbsp;
+                    <a class="nav-link" href="#">Downloads</a> &nbsp; &nbsp;
+              </div>
+            </div>
+        </nav>
+        <!-- END OF NAVBAR -->
+    </header>
+    <main>
+        <section>
+            <!-- FIRST ROW -->
+            <div class="container-fluid">
+                <div class="row" id="first-row">
+                  <div class="col-3">
+                    Genre 
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                    <ul type="square">
+                        <li><button type="button" class="btn">Action</button></li>
+                        <li><button type="button" class="btn">Comedy</button></li>
+                        <li><button type="button" class="btn">Drama</button></li>
+                        <li><button type="button" class="btn">Fantasy</button></li>
+                        <li><button type="button" class="btn">Horror</button></li>
+                        <li><button type="button" class="btn">Romance</button></li>
+                        <li><button type="button" class="btn">Thriller</button></li>
+                    </ul>
+                  </div>
+                  <div class="col-9" id="search-column">
+                    column
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                  </div>
+                </div>
+              </div>
+              <!-- END OF FIRST ROW -->
+              <!-- START OF SECOND ROW  -->
+              <div class="container-fluid">
+                <div class="row">
+                  <div class="col-3">
+                    MOVIES
+                    <div class="card" style="width: 18rem;">
+                        <img src="/Images/Joker.jpg" class="card-img-top" alt="joker" style="height: 300px;">
+                        <div class="card-body">
+                          <h5 class="card-title">Joker</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Watch Now</a>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="col-3">
+                    <br>
+                    <div class="card" style="width: 18rem;">
+                        <img src="/Images/The-Corpse-Bride.jpg" class="card-img-top" alt="The Corpse Bride" style="height: 300px;">
+                        <div class="card-body">
+                          <h5 class="card-title">The Corpse Bride</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Watch Now</a>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="col-3">
+                    <br>
+                    <div class="card" style="width: 18rem;">
+                        <img src="/Images/The-Purge.jpg" class="card-img-top" alt="The Purge" style="height: 300px;">
+                        <div class="card-body">
+                          <h5 class="card-title">The Purge</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Watch Now</a>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="col-3">
+                    <br>
+                    <div class="card" style="width: 18rem;">
+                        <img src="/Images/The-Matrix.jpg" class="card-img-top" alt="The Matrix" style="height: 300px;">
+                        <div class="card-body">
+                          <h5 class="card-title">The Matrix</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Watch Now</a>
+                        </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- END OF SECOND ROW -->
+              <br>
+              <br>
+              <br>
+              <!-- START OF THIRD ROW -->
+              <div class="container-fluid">
+                <div class="row">
+                  <div class="col-3">
+                    SERIES
+                    <div class="card" style="width: 18rem;">
+                        <img src="/Images/GOT.jpg" class="card-img-top" alt="Game of Thrones" style="height: 300px;">
+                        <div class="card-body">
+                          <h5 class="card-title">Game of Thrones</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Watch Now</a>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="col-3">
+                    <br>
+                    <div class="card" style="width: 18rem;">
+                        <img src="/Images/Queens-Gambit.jpg" class="card-img-top" alt="Queen's Gambit" style="height: 300px;">
+                        <div class="card-body">
+                          <h5 class="card-title">The Queen's Gambit</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Watch Now</a>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="col-3">
+                    <br>
+                    <div class="card" style="width: 18rem;">
+                        <img src="/Images/Alice-In-Borderland.jpg" class="card-img-top" alt=".Alice in Borderland" style="height: 300px;">
+                        <div class="card-body">
+                          <h5 class="card-title">Alice in Borderland</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Watch Now</a>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="col-3">
+                    <br>
+                    <div class="card" style="width: 18rem;">
+                        <img src="/Images/Killing-Eve.jpg" class="card-img-top" alt="Killing Eve" style="height: 300px;">
+                        <div class="card-body">
+                          <h5 class="card-title">Killing Eve</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Watch Now</a>
+                        </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- END OF THIRD ROW -->
+        </section>
+        <br>
+        <br>
+        <br>
+        <footer>
+
+        </footer>
+    </main>
+   
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
