--- a/HTML-CSS/watching-page.html
+++ b/HTML-CSS/watching-page.html
@@ -4,10 +4,86 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="watching-page.css">
+    <link rel="shortcut icon" href="#" type="#">
     <title>Watching Page</title>
 </head>
-<body>
-    <!-- Watching page -->
+
+<body class="bg-black text-white bg-opacity-75">
+    <!-- Watching Page -->
+<div class="container-fluid row m-4">
+    <div class="col-md-4">
+        <div><img src="https://img.yts.mx/assets/images/movies/one_piece_film_red_2022/medium-cover.jpg" class="rounded mx-auto d-block border border-white"></div>
+        <div class="d-flex justify-content-center p-1"><button class="btn btn-outline-primary" type="submit">Watch Now</button></div>
+        <div class="d-flex justify-content-center p-1"><button class="btn btn-outline-primary" type="submit">Download</button></div>
+        <div class="d-flex justify-content-center p-1"><button class="btn btn-outline-primary" type="submit">Save</button></div>
+    </div>
+
+    <div class="col-sm-5">
+        <h1>One Piece Film: Red</h1>
+        <h4>2022 [Japanese]</h4>
+        <h4>Action/ Adventure/ Animation/ Fantasy</h4>
+        <h6>Available in: 3D, 1080p, 4k</h6>
+        <p class="">Download Subtitles</p>
+        <h5>❤ 143</h5>
+        <h5><img src="https://yts.mx/assets/images/website/rt-certified-fresh.png"> 90% - Critics</h5>
+        <h5><img src="https://yts.mx/assets/images/website/rt-upright.png"> 95% - Audience</h5>
+        <h5><img src="https://yts.mx/assets/images/website/logo-imdb.svg"> 8.0 ⭐</h5>
+    </div>
+
+    <div class="col-sm-3">
+        <h6>Similar Movies</h6>
+        <div class="d-flex mb-2">
+            <div class="p-2"><img src="https://img.yts.mx/assets/images/movies/just_my_type_2020/medium-cover.jpg" class="rounded mx-auto d-block border border-white" height="150px"></div>
+            <div class="p-2"><img src="https://img.yts.mx/assets/images/movies/the_invitation_2022/medium-cover.jpg" class="rounded mx-auto d-block border border-white" height="150px"></div>
+        </div>
+        <div class="d-flex mb-2">
+            <div class="p-2"><img src="https://img.yts.mx/assets/images/movies/terrifier_2_2022/medium-cover.jpg" class="rounded mx-auto d-block border border-white" height="150px"></div>
+            <div class="p-2"><img src="https://img.yts.mx/assets/images/movies/black_adam_2022/medium-cover.jpg" class="rounded mx-auto d-block border border-white" height="150px"></div>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid row m-4">
+        <div class="col-sm-4"><video height="200" width="350" controls><source src="trailer.mp4" type=".mp4"></video></div>
+        <div class="col-sm-4"><img src="https://img.yts.mx/assets/images/movies/one_piece_film_red_2022/medium-screenshot2.jpg" class="rounded mx-auto d-block border border-white"></div>
+        <div class="col-sm-4"><img src="https://img.yts.mx/assets/images/movies/one_piece_film_red_2022/medium-screenshot3.jpg" class="rounded mx-auto d-block border border-white"></div>
+</div>
+
+<div class="container-fluid row m-4">
+    <div class="col-md-8">
+        <h3>Plot Summary</h3>
+        <p>
+            Uta - the most beloved singer in the world. Her voice, which she sings with while concealing her true identity, has been described as "otherworldly." She will appear in public for the first time at a live concert. As the venue fills with all kinds of Uta fans - excited pirates, the Navy watching closely, and the Straw Hats led by Luffy who simply came to enjoy her sonorous performance - the voice that the whole world has been waiting for is about to resound. The story begins with the shocking fact that she is "Shanks' daughter."
+        </p>
+    </div>
+    <div class="col-md-4">
+        <div>
+            <p>Director</p>
+            <p><img src="https://img.yts.mx/assets/images/actors/thumb/default_avatar.jpg" class="rounded-circle"> Gorô Taniguchi</p>
+        </div>
+        <hr>
+        <div>
+            <p>Top Cast</p> 
+            <p><img src="https://img.yts.mx/assets/images/actors/thumb/nm2233310.jpg" class="rounded-circle">Matthew Mercer as Trafalgar Law</p>
+            <p><img src="https://img.yts.mx/assets/images/actors/thumb/nm0754526.jpg" class="rounded-circle">Christopher Sabat as Roronoa Zoro</p>
+            <p><img src="https://img.yts.mx/assets/images/actors/thumb/default_avatar.jpg" class="rounded-circle">Brandon Potter as Shanks</p>
+            <p><img src="https://img.yts.mx/assets/images/actors/thumb/nm2569233.jpg" class="rounded-circle">Yûki Kaji as Yorueka</p>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid row m-4">
+    <div class="col-md-6">
+        <h3>Comments</h3>
+        <input class="form-control" type="text" placeholder="Comment" aria-label="default input example">
+    </div>
+    <div class="col-md-6">
+        <h3>Movie Reviews</h3>
+    </div>
+</div>
+
+<script></script>
 </body>
 </html>
