--- a/HTML-CSS/landing.html
+++ b/HTML-CSS/landing.html
@@ -4,12 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="landing.css">
     <link rel="icon" href="Flexstream.png" type="png">
     <title>FlexStream</title>
+    <link rel="stylesheet" href="landing.css">
 </head>
 <body>
      
+<!--FLEXSTREAM ORIGINALS-->
+<div class="row">
+  <h2>FLEXSTREAM ORIGINALS</h2>
+  <div class="row_posters">
+    <img src="Images/Hospital Playlist.jpg" alt="" class="row_poster row_posterLarge">
+    <img src="Journey to the center of the earth.jpg" alt="" class="row_poster row_posterLarge">
+    <img src="The Mummy.jpg" alt="" class="row_poster row_posterLarge">
+    <img src="Journey.jpg" alt="" class="row_poster row_posterLarge">
+    <img src="Jumanji.jpg" alt="" class="row_poster row_posterLarge">
+    <img src="Hospital Playlist.jpg" alt="" class="row_poster row_posterLarge">
+    <img src="Journey to the center of the earth.jpg" alt="" class="row_poster row_posterLarge">
+    <img src="The Mummy.jpg" alt="" class="row_poster row_posterLarge">
+    <img src="Jumanji.jpg" alt="" class="row_poster row_posterLarge">
+  </div>
+</div>
+<!--END OF FLEXSTREAM ORIGINALS-->
+
 <!--FLEXSTREAM ORIGINALS-->
 <div class="row">
   <h2>FLEXSTREAM ORIGINALS</h2>
@@ -26,7 +43,6 @@
   </div>
 </div>
 <!--END OF FLEXSTREAM ORIGINALS-->
-  
 
 
 
