add new webpages, add comments

--- a/HTML-CSS/sign-in.html
+++ b/HTML-CSS/sign-in.html
@@ -9,5 +9,22 @@
 </head>
 <body>
     <!-- Sign In ang Log In forms-->
+
+    
+    <!-- PARA SA SIGN-UP WEB PAGE
+
+    *3 PAGES LAHAT
+    -ITONG PAGE NA 'TO YUNG UNA. YUNG NASA PINAKATAAS NA SIGN-UP SA FIGMA
+    -YUNG PANGALAWA, SIGN-IN2(DOT) HTML PARA DUN SA "FINISH SETTING UP UR ACC"
+    -PANGATLO YUNG SIGN-IN3 (DOT) HTML, PARA DUN SA "CHOOSE UR PLAN"
+
+    *Lahat yan i-link mo sa sign-in(dot)css kung gagamitan mo ng css style.
+    *Gumawa ako ng Log in html atsaka css para sa LOG IN WEB PAGE
+
+    *WAG KALIMUTAN I-LINK YUNG MGA DAPAT I-LINK 
+
+    *nag-add na'ko nga navbar sa watching page
+
+    sa wakas pwede na matulog -->
 </body>
 </html>
