add header add comments

--- a/HTML-CSS/sign-in2.html
+++ b/HTML-CSS/sign-in2.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- NASA SIGN-IN(dot)HTML YUNG MGA COMMENTS -->
+    <!-- NASA SIGN-IN(dot)HTML YUNG MGA COMMENTSs -->
 </body>
 </html>
