--- a/HTML-CSS/landing.html
+++ b/HTML-CSS/landing.html
@@ -16,7 +16,7 @@
     <!--NAVIGATION BAR-->
        <div class="navbar">
           <li class="logo"><img src="/Images/Flexstream.png"> </li>
-            <li class="buttons">Sign In</a>
+          <li><a type="button" class="btn buttons" href="sign-in.html">Sign In</a></li>
           </div>
 
     <!--UNLIMITED MOVIES-->
