--- a/HTML-CSS/sign-in.html
+++ b/HTML-CSS/sign-in.html
@@ -5,9 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="sign-in.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
+    <link rel="icon" type="image/x-icon" href="/Images/Brown and White Named Warner & Spencer Logo-2.png">
     <title>Sign In</title>
 </head>
-<body>
+<body class="bg-black text-white">
+    <header>
+        <!-- NAVBAR -->
+        <nav class="navbar bg-black">
+            <div class="container-fluid col-lg-12 col-sm-6" id="nav">
+              <a class="navbar-brand">
+                <img src="/Images/Brown and White Named Warner & Spencer Logo-2.png" alt="FexStream logo" style="height: 25px; width: 25px;">
+                FlexStream
+              </a>
+              <div class="d-flex">
+                    <div class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <img src="/Images/me nobg.png" alt="account-pic" height="30" width="30" style="border: 2px solid skyblue; border-radius: 40px;">
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="settings.html">My Account</a>
+                            <a class="dropdown-item" href="my-list.html">My List</a>
+                            <a class="dropdown-item" href="#">Downloads</a>
+                            <a class="dropdown-item" href="settings.html">Settings</a>
+                            <a class="dropdown-item" href="#">Log Out</a>
+                        </div>
+                    </div> &nbsp; &nbsp; &nbsp;
+                    <a class="nav-link" href="with-account.html">Home</a> &nbsp; &nbsp; &nbsp;
+                    <a class="nav-link" href="my-list.html">My List</a> &nbsp; &nbsp; &nbsp;
+                    <a class="nav-link" href="#">Downloads</a> &nbsp; &nbsp;
+              </div>
+            </div>
+        </nav>
+        <!-- END OF NAVBAR -->
+    </header>
     <!-- Sign In ang Log In forms-->
 
     
@@ -26,5 +57,22 @@
     *nag-add na'ko nga navbar sa watching page
 
     sa wakas pwede na matulog -->
+<div class="row mt-5"></div>
+<div class="container-fluid row mt-5">
+    <div class="col-sm-3"></div>
+    <div class="col-sm-6 text-center text-info">
+        <h1 class="p-4">Unlimited movies, series and more.</h1> 
+        <h4 class="p-4">Watch you favorite shows for only $20/month.</h4> 
+        <h6 class="p-2">Sign in to continue</h6>
+        <table >
+            <tr>
+                <td class="col-sm-12"><input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email Address"></td>
+                <td><a href="sign-in2.html"><button class="btn btn-info" type="submit">Submit</button></a></td>
+            </tr>
+        </table>
+        <p class="p-2">Already have an account? <a href="log-in.html"><span class="fw-bold fst-italic text-info">Login to continue</span></a></p>
+    </div>
+    <div class="col-sm-3"></div>
+</div>
 </body>
 </html>
