--- a/HTML-CSS/watching-page.html
+++ b/HTML-CSS/watching-page.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="watching-page.css">
-    <link rel="shortcut icon" href="#" type="#">
-    <title>Watching Page</title>
+    <link rel="icon" type="image/x-icon" href="/Images/Brown and White Named Warner & Spencer Logo-2.png">
+    <title>Flex Stream</title>
 </head>
 
-<body class="bg-black text-white bg-opacity-75">
+<body class="bg-black text-white">
     <!-- Watching Page -->
     <header>
         <!-- NAVBAR -->
-        <nav class="navbar bg-black">
+        <nav class="navbar bg-dark">
             <div class="container-fluid col-lg-12 col-sm-6" id="nav">
               <a class="navbar-brand">
                 <img src="/Images/Brown and White Named Warner & Spencer Logo-2.png" alt="FexStream logo" style="height: 25px; width: 25px;">
