--- a/HTML-CSS/with-account.html
+++ b/HTML-CSS/with-account.html
@@ -29,7 +29,7 @@
                             <a class="dropdown-item" href="my-list.html">My List</a>
                             <a class="dropdown-item" href="#">Downloads</a>
                             <a class="dropdown-item" href="settings.html">Settings</a>
-                            <a class="dropdown-item" href="#">Log Out</a>
+                            <a class="dropdown-item" href="log-in.html">Log Out</a>
                         </div>
                     </div> &nbsp; &nbsp; &nbsp;
                     <a class="nav-link" href="with-account.html">Home</a> &nbsp; &nbsp; &nbsp;
@@ -60,7 +60,7 @@
               <br>
               <br>
               <!-- START OF MOVIE LIST -->
-              <P class="cap">MOVIES</P>
+              <P class="cap">POPULAR MOVIES</P>
               <div class="container-fluid">
                 <div class="row">
                   <div class="col-lg-3 col-md-6 col-sm-6 pb-4">
@@ -116,7 +116,7 @@
             <br>
             <!-- END OF MOVIE LIST -->
             <!-- START OF SERIES LIST -->
-            <p class="cap">SERIES</p>
+            <p class="cap">POPULAR SERIES</p>
             <div class="container-fluid">
                 <div class="row">
                   <div class="col-lg-3 col-md-6 col-sm-6 pb-4">
@@ -147,7 +147,7 @@
                             <img src="/Images/Enola.jpg" class="card-img-top" alt="Enola Holmes" style="height: 340px;">
                             <div class="info">
                                 <p style="text-align: center;"><strong>Enola Holmes</strong></p>
-                                <a href="#" class="btn">Watch Now</a>
+                                <a href="watching-page.html" class="btn">Watch Now</a>
                             </div>
                         </div>
                     </div>
