--- a/HTML-CSS/watching-page.html
+++ b/HTML-CSS/watching-page.html
@@ -12,35 +12,31 @@
 
 <body class="bg-black text-white">
     <!-- Watching Page -->
-    <header>
-        <!-- NAVBAR -->
-        <nav class="navbar bg-dark">
-            <div class="container-fluid col-lg-12 col-sm-6" id="nav">
-              <a class="navbar-brand">
-                <img src="/Images/Brown and White Named Warner & Spencer Logo-2.png" alt="FexStream logo" style="height: 25px; width: 25px;">
-                FlexStream
-              </a>
-              <div class="d-flex">
-                    <div class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="/Images/me nobg.png" alt="account-pic" height="30" width="30" style="border: 2px solid skyblue; border-radius: 40px;">
-                        </a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="settings.html">My Account</a>
-                            <a class="dropdown-item" href="my-list.html">My List</a>
-                            <a class="dropdown-item" href="#">Downloads</a>
-                            <a class="dropdown-item" href="settings.html">Settings</a>
-                            <a class="dropdown-item" href="log-in.html">Log Out</a>
-                        </div>
-                    </div> &nbsp; &nbsp; &nbsp;
-                    <a class="nav-link" href="with-account.html">Home</a> &nbsp; &nbsp; &nbsp;
-                    <a class="nav-link" href="my-list.html">My List</a> &nbsp; &nbsp; &nbsp;
-                    <a class="nav-link" href="#">Downloads</a> &nbsp; &nbsp;
-              </div>
-            </div>
-        </nav>
-        <!-- END OF NAVBAR -->
-    </header>
+    <nav class="navbar bg-black">
+        <div class="container-fluid col-lg-12 col-sm-6" id="nav">
+          <a class="navbar-brand">
+            <img src="/Images/Brown and White Named Warner & Spencer Logo-2.png" alt="FexStream logo" style="height: 25px; width: 25px;">
+            FlexStream
+          </a>
+          <div class="d-flex">
+                <div class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <img src="/Images/me nobg.png" alt="account-pic" height="30" width="30" style="border: 2px solid skyblue; border-radius: 40px;">
+                    </a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="settings.html">My Account</a>
+                        <a class="dropdown-item" href="my-list.html">My List</a>
+                        <a class="dropdown-item" href="#">Downloads</a>
+                        <a class="dropdown-item" href="settings.html">Settings</a>
+                        <a class="dropdown-item" href="log-in.html">Log Out</a>
+                    </div>
+                </div> &nbsp; &nbsp; &nbsp;
+                <a class="nav-link" href="with-account.html">Home</a> &nbsp; &nbsp; &nbsp;
+                <a class="nav-link" href="my-list.html">My List</a> &nbsp; &nbsp; &nbsp;
+                <a class="nav-link" href="#">Downloads</a> &nbsp; &nbsp;
+          </div>
+        </div>
+    </nav>
 <div class="container-fluid row m-4">
     <div class="col-sm-4">
         <div><img src="https://img.yts.mx/assets/images/movies/enola_holmes_2020/medium-cover.jpg" class="rounded mx-auto d-block border border-white"></div>
