--- a/HTML-CSS/sign-in2.html
+++ b/HTML-CSS/sign-in2.html
@@ -14,7 +14,7 @@
 <div class="container-fluid row mt-5">
     <div class="col-sm-3"></div>
     <div class="col-sm-6 text-center text-info">
-        <h4 class="p-4">Finish setting up your account.</h4> 
+        <h4 class="p-4">Finish segit tting up your account.</h4> 
         <span class="p-4"><input type="email" class="form-control p-2" id="exampleInputEmail1" placeholder="Email Address"></span>
         <span class="p-4"><input type="password" class="form-control" id="exampleInputEmail1" placeholder="Password"></span>
         <br>
