--- a/HTML-CSS/sign-in3.html
+++ b/HTML-CSS/sign-in3.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="sign-in3.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
+    <link rel="icon" type="image/x-icon" href="/Images/Brown and White Named Warner & Spencer Logo-2.png">
+    <title>Sign In</title>
 </head>
-<body>
-    <!-- NASA SIGN-IN(dot)HTML YUNG MGA COMMENTS  -->
+<body class="bg-black text-white">
+<div class="container-fluid row mt-5">
+<div class="container-fluid row mt-5">
+    <div class="col-sm-3"></div>
+    <div class="col-sm-6 text-center text-info">
+        <h3 class="p-4">Choose your plan.</h3>
+        <form class="fs-3">
+            <input type="checkbox" id="checkbox" name="checkbox">
+            <label> $20/monthly payment.</label><br>
+            <input type="checkbox" id="checkbox" name="checkbox">
+            <label> No adds and no extra fees.</label><br>
+            <input type="checkbox" id="checkbox" name="checkbox">
+            <label> No commitments, cancel anytime.</label><br><br>
+            <a href="log-in.html"><button class="btn btn-info" type="submit">Next</button></a>
+          </form>
+        <br>
+        <br>
+
+    </div>
+<div class="col-sm-3"></div>
+</div>
 </body>
 </html>
