--- a/HTML-CSS/sign-in.html
+++ b/HTML-CSS/sign-in.html
@@ -10,24 +10,7 @@
     <title>Sign In</title>
 </head>
 <body class="bg-black text-white">
-    <!-- Sign In ang Log In forms-->
-
-    
-    <!-- PARA SA SIGN-UP WEB PAGE
-
-    *3 PAGES LAHAT
-    -ITONG PAGE NA 'TO YUNG UNA. YUNG NASA PINAKATAAS NA SIGN-UP SA FIGMA
-    -YUNG PANGALAWA, SIGN-IN2(DOT) HTML PARA DUN SA "FINISH SETTING UP UR ACC"
-    -PANGATLO YUNG SIGN-IN3 (DOT) HTML, PARA DUN SA "CHOOSE UR PLAN"
-
-    *Lahat yan i-link mo sa sign-in(dot)css kung gagamitan mo ng css style.
-    *Gumawa ako ng Log in html atsaka css para sa LOG IN WEB PAGE
-
-    *WAG KALIMUTAN I-LINK YUNG MGA DAPAT I-LINK 
-
-    *nag-add na'ko nga navbar sa watching page
-
-    sa wakas pwede na matulog -->
+<div class="row mt-5"></div>
 <div class="row mt-5"></div>
 <div class="container-fluid row mt-5">
     <div class="col-sm-3"></div>
@@ -37,7 +20,7 @@
         <h6 class="p-2">Sign in to continue</h6>
         <table >
             <tr>
-                <td class="col-sm-12"><input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email Address"></td>
+                <td class="col-sm-12"><input type="email" class="form-control" placeholder="Email Address"></td>
                 <td><a href="sign-in2.html"><button class="btn btn-info" type="submit">Submit</button></a></td>
             </tr>
         </table>
