--- a/HTML-CSS/log-in.html
+++ b/HTML-CSS/log-in.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="sign-in.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
+    <link rel="icon" type="image/x-icon" href="/Images/Brown and White Named Warner & Spencer Logo-2.png">
+    <title>Log In</title>
 </head>
-<body>
-    <!-- NASA SIGN-IN(dot)HTML YUNG MGA COMMENTS  -->
+<body class="bg-black text-white">
+<div class="row mt-5"></div>
+<div class="row mt-5"></div>
+<div class="row mt-5"></div>
+<div class="container-fluid row mt-5">
+    <div class="col-sm-3"></div>
+    <div class="col-sm-6 text-center text-info">
+        <h1 class="p-4">Login to continue.</h1> 
+        <table >
+            <tr>
+                <td class="col-sm-12"><input type="email" class="form-control" placeholder="Email Address"></td>
+                <td><a href="with-account.html"><button class="btn btn-info" type="submit">Submit</button></a></td>
+            </tr>
+        </table>
+        <p class="p-2"><a href="#"><span class="fw-bold fst-italic text-info">Forgot password?</span></a></p>
+    </div>
+    <div class="col-sm-3"></div>
+</div>
 </body>
 </html>
