--- a/HTML-CSS/sign-in2.html
+++ b/HTML-CSS/sign-in2.html
@@ -14,9 +14,9 @@
 <div class="container-fluid row mt-5">
     <div class="col-sm-3"></div>
     <div class="col-sm-6 text-center text-info">
-        <h4 class="p-4">Finish segit tting up your account.</h4> 
-        <span class="p-4"><input type="email" class="form-control p-2" id="exampleInputEmail1" placeholder="Email Address"></span>
-        <span class="p-4"><input type="password" class="form-control" id="exampleInputEmail1" placeholder="Password"></span>
+        <h4 class="p-4">Finish setting up your account.</h4> 
+        <span class="p-4"><input type="email" class="form-control p-2" placeholder="example@email.com"></span>
+        <span class="p-4"><input type="password" class="form-control" placeholder="Password"></span>
         <br>
         <br>
         <a href="sign-in3.html"><button class="btn btn-info" type="submit">Next</button></a>
