--- a/HTML-CSS/watching-page.html
+++ b/HTML-CSS/watching-page.html
@@ -60,19 +60,19 @@
         <div class="row p-4">
             <table>
                 <tr>
-                    <td>❤</td>
+                    <td class="text-center">❤</td>
                     <td><b>263</b></td>
                 </tr>
                 <tr>
-                    <td><img src="https://yts.mx/assets/images/website/rt-certified-fresh.png"></td>
+                    <td class="text-center"><img src="https://yts.mx/assets/images/website/rt-certified-fresh.png"></td>
                     <td><b>91% - Critics</b></td>
                 </tr>
                 <tr>
-                    <td><img src="https://yts.mx/assets/images/website/rt-upright.png"></td>
+                    <td class="text-center"><img src="https://yts.mx/assets/images/website/rt-upright.png"></td>
                     <td><b>71% - Audience</b></td>
                 </tr>
                 <tr>
-                    <td><img src="https://yts.mx/assets/images/website/logo-imdb.svg"></td>
+                    <td class="text-center"><img src="https://yts.mx/assets/images/website/logo-imdb.svg"></td>
                     <td><b>6.6/10 ⭐</b></td>
                 </tr>
             </table>
@@ -93,9 +93,9 @@
 </div>
 
 <div class="container-fluid row m-4">
-        <div class="col-sm-4 rounded float-end"><video controls><source src="trailer.mp4" type=".mp4"></video></div>
-        <div class="col-sm-4"><img src="https://img.yts.mx/assets/images/movies/enola_holmes_2020/medium-screenshot2.jpg" class="rounded mx-auto d-block"></div>
-        <div class="col-sm-4"><img src="https://img.yts.mx/assets/images/movies/enola_holmes_2020/medium-screenshot3.jpg" class="rounded float-start"></div>
+        <div class="col-sm-4"><video controls><source src="trailer.mp4" type=".mp4"></video></div>
+        <div class="col-sm-4"><img src="https://img.yts.mx/assets/images/movies/enola_holmes_2020/medium-screenshot2.jpg" class="rounded"></div>
+        <div class="col-sm-4"><img src="https://img.yts.mx/assets/images/movies/enola_holmes_2020/medium-screenshot3.jpg" class="rounded"></div>
 </div>
 
 <div class="container-fluid row m-4">
