--- a/HTML-CSS/log-in.html
+++ b/HTML-CSS/log-in.html
@@ -10,22 +10,18 @@
     <title>Log In</title>
 </head>
 <body class="bg-black text-white">
-<div class="row mt-5"></div>
-<div class="row mt-5"></div>
-<div class="row mt-5"></div>
+<div class="container-fluid row mt-5">
 <div class="container-fluid row mt-5">
     <div class="col-sm-3"></div>
     <div class="col-sm-6 text-center text-info">
-        <h1 class="p-4">Login to continue.</h1> 
-        <table >
-            <tr>
-                <td class="col-sm-12"><input type="email" class="form-control" placeholder="Email Address"></td>
-                <td><a href="with-account.html"><button class="btn btn-info" type="submit">Submit</button></a></td>
-            </tr>
-        </table>
-        <p class="p-2"><a href="#"><span class="fw-bold fst-italic text-info">Forgot password?</span></a></p>
+        <h4 class="p-4">Login to continue.</h4> 
+        <span class="p-4"><input type="email" class="form-control p-2" placeholder="example@email.com"></span>
+        <span class="p-4"><input type="password" class="form-control" placeholder="Password"></span>
+        <br>
+        <br>
+        <a href="with-account.html"><button class="btn btn-info" type="submit">Log In</button></a>
     </div>
-    <div class="col-sm-3"></div>
+<div class="col-sm-3"></div>
 </div>
 </body>
 </html>
