--- a/HTML-CSS/landing.html
+++ b/HTML-CSS/landing.html
@@ -123,6 +123,14 @@
 
          <h4>Ready to watch? Enter your email to create or access your account
        </h4>
+    <footer>
+        <div class="container text-center">
+            FlexStream © 2022-2023
+            By using our website, you accept our <i>User Agreement</i>. Read <i>here</i>.
+        </div>
+    </footer>
+    <br>
     </div>
+
   </body>
 </html>
