--- a/HTML-CSS/sign-in.html
+++ b/HTML-CSS/sign-in.html
@@ -28,5 +28,14 @@
     </div>
     <div class="col-sm-3"></div>
 </div>
+<br>
+<footer>
+    <div class="container text-center">
+        FlexStream © 2022-2023
+        By using our website, you accept our <i>User Agreement</i>. Read <i>here</i>.
+    </div>
+</footer>
+<br>
+
 </body>
 </html>
