--- a/HTML-CSS/watching-page.html
+++ b/HTML-CSS/watching-page.html
@@ -134,6 +134,13 @@
         <input class="form-control" type="text" placeholder="Still in Progress" aria-label="default input example">
     </div>
 </div>
+<footer>
+    <div class="container text-center">
+        FlexStream © 2022-2023
+        By using our website, you accept our <i>User Agreement</i>. Read <i>here</i>.
+    </div>
+</footer>
+<br>
 
 <script></script>
 </body>
