--- a/HTML-CSS/with-account.html
+++ b/HTML-CSS/with-account.html
@@ -170,7 +170,15 @@
         <br>
         <br>
         <br>
-
+        <br>
+        <br>
+        <footer>
+            <div class="container text-center">
+                FlexStream © 2022-2023
+                By using our website, you accept our <i>User Agreement</i>. Read <i>here</i>.
+            </div>
+        </footer>
+        <br>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
