--- a/HTML-CSS/sign-in3.html
+++ b/HTML-CSS/sign-in3.html
@@ -16,12 +16,14 @@
     <div class="col-sm-6 text-center text-info">
         <h3 class="p-4">Choose your plan.</h3>
         <form class="fs-3">
-            <input type="checkbox" id="checkbox" name="checkbox">
+            <input type="checkbox">
             <label> $20/monthly payment.</label><br>
-            <input type="checkbox" id="checkbox" name="checkbox">
+            <input type="checkbox">
             <label> No adds and no extra fees.</label><br>
-            <input type="checkbox" id="checkbox" name="checkbox">
-            <label> No commitments, cancel anytime.</label><br><br>
+            <input type="checkbox">
+            <label> No commitments, cancel anytime.</label>
+            <br>
+            <br>
           </form>
           <a href="log-in.html"><button class="btn btn-info" type="submit">Next</button></a>
         <br>
