--- a/HTML-CSS/watching-page.html
+++ b/HTML-CSS/watching-page.html
@@ -40,7 +40,7 @@
     <div class="col-sm-4">
         <div><img src="https://img.yts.mx/assets/images/movies/enola_holmes_2020/medium-cover.jpg" class="rounded mx-auto d-block border border-white"></div>
         <div class="d-flex justify-content-center p-1"><button class="btn btn-info" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: 4.60rem;" type="submit">Watch Now</button></div>
-        <div class="d-flex justify-content-center p-1"><button class="btn btn-success" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: 4.90rem;" type="submit">Download</button></div>
+        <div class="d-flex justify-content-center p-1"><a href="downloads.html"><button class="btn btn-success" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: 4.90rem;" type="submit">Download</button></a></div>
         <div class="d-flex justify-content-center p-1"><button class="btn btn-warning" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: 6.2rem;" type="submit">Save</button></div>
     </div>
 
