--- a/HTML-CSS/landing.html
+++ b/HTML-CSS/landing.html
@@ -125,7 +125,7 @@
        </h4>
     <footer>
         <div class="container text-center">
-            FlexStream © 2022-2023
+            FlexStream © 2022-2023.
             By using our website, you accept our <i>User Agreement</i>. Read <i>here</i>.
         </div>
     </footer>
