--- a/HTML-CSS/with-account.html
+++ b/HTML-CSS/with-account.html
@@ -174,7 +174,7 @@
         <br>
         <footer>
             <div class="container text-center">
-                FlexStream © 2022-2023
+                FlexStream © 2022-2023.
                 By using our website, you accept our <i>User Agreement</i>. Read <i>here</i>.
             </div>
         </footer>
