--- a/HTML-CSS/sign-in.html
+++ b/HTML-CSS/sign-in.html
@@ -16,7 +16,7 @@
     <div class="col-sm-3"></div>
     <div class="col-sm-6 text-center text-info">
         <h1 class="p-4">Unlimited movies, series and more.</h1> 
-        <h4 class="p-4">Watch you favorite shows for only $20/month.</h4> 
+        <h4 class="p-4">Watch your favorite shows for only $20/month.</h4> 
         <h6 class="p-2">Sign in to continue</h6>
         <table >
             <tr>
@@ -28,10 +28,9 @@
     </div>
     <div class="col-sm-3"></div>
 </div>
-<br>
 <footer>
     <div class="container text-center">
-        FlexStream © 2022-2023
+        FlexStream © 2022-2023.
         By using our website, you accept our <i>User Agreement</i>. Read <i>here</i>.
     </div>
 </footer>
