--- a/HTML-CSS/watching-page.html
+++ b/HTML-CSS/watching-page.html
@@ -91,9 +91,9 @@
     </div>
 </div>
 
-<div class="container-fluid row m-4">
-        <div class="col-sm-4"><video controls><source src="video.mp4" type=".mp4"></video></div>
-        <div class="col-sm-4"><img src="https://img.yts.mx/assets/images/movies/enola_holmes_2020/medium-screenshot2.jpg" class="rounded"></div>
+<div class="container-fluid row m-5">
+        <div class="col-sm-4"><video src="video.mp4" height="160px" width="300px" controls></video></div>
+        <div class="col-sm-4"><img src="https://img.yts.mx/assets/images/movies/enola_holmes_2020/medium-screenshot2.jpg"></div>
         <div class="col-sm-4"><img src="https://img.yts.mx/assets/images/movies/enola_holmes_2020/medium-screenshot3.jpg" class="rounded"></div>
 </div>
 
