--- a/HTML-CSS/watching-page.html
+++ b/HTML-CSS/watching-page.html
@@ -39,7 +39,7 @@
 <div class="container-fluid row m-4">
     <div class="col-sm-4">
         <div><img src="https://img.yts.mx/assets/images/movies/enola_holmes_2020/medium-cover.jpg" class="rounded mx-auto d-block border border-white"></div>
-        <div class="d-flex justify-content-center p-1"><button class="btn btn-info" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: 4.60rem;" type="submit">Watch Now</button></div>
+        <div class="d-flex justify-content-center p-1"><a href="watchnow.html"><button class="btn btn-info" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: 4.60rem;" type="submit">Watch Now</button></a></div>
         <div class="d-flex justify-content-center p-1"><a href="downloads.html"><button class="btn btn-success" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: 4.90rem;" type="submit">Download</button></a></div>
         <div class="d-flex justify-content-center p-1"><button class="btn btn-warning" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: 6.2rem;" type="submit">Save</button></div>
     </div>
@@ -92,7 +92,7 @@
 </div>
 
 <div class="container-fluid row m-5">
-        <div class="col-sm-4"><video src="video.mp4" height="160px" width="300px" controls></video></div>
+        <div class="col-sm-4"><video src="video.mp4" height="160px" width="350px" controls title="Trailer"></video></div>
         <div class="col-sm-4"><img src="https://img.yts.mx/assets/images/movies/enola_holmes_2020/medium-screenshot2.jpg"></div>
         <div class="col-sm-4"><img src="https://img.yts.mx/assets/images/movies/enola_holmes_2020/medium-screenshot3.jpg" class="rounded"></div>
 </div>
