--- a/HTML-CSS/watchnow.html
+++ b/HTML-CSS/watchnow.html
@@ -8,7 +8,9 @@
     <link rel="icon" type="image/x-icon" href="/Images/Brown and White Named Warner & Spencer Logo-2.png">
     <title>Enola Holmes</title>
 </head>
-<body>
-<video src="video.mp4" controls></video>
+<body class="bg-black">
+<div class="container">
+    <video src="video.mp4" controls title="Play"></video>
+</div>
 </body>
 </html>
