--- a/HTML-CSS/watching-page.html
+++ b/HTML-CSS/watching-page.html
@@ -31,7 +31,7 @@
                 </div> &nbsp; &nbsp; &nbsp;
                 <a class="nav-link" href="with-account.html">Home</a> &nbsp; &nbsp; &nbsp;
                 <a class="nav-link" href="my-list.html">My List</a> &nbsp; &nbsp; &nbsp;
-                <a class="nav-link" href="#">Downloads</a> &nbsp; &nbsp;
+                <a class="nav-link" href="downloads.html">Downloads</a> &nbsp; &nbsp;
           </div>
         </div>
     </nav>
