--- a/HTML-CSS/log-in.html
+++ b/HTML-CSS/log-in.html
@@ -15,7 +15,7 @@
     <div class="col-sm-3"></div>
     <div class="col-sm-6 text-center text-info">
         <h4 class="p-4">Login to continue.</h4> 
-        <span class="p-4"><input type="email" class="form-control p-2" placeholder="example@email.com"></span>
+        <span class="p-4"><input type="email" class="form-control p-2" placeholder="Email Address/Username"></span>
         <span class="p-4"><input type="password" class="form-control" placeholder="Password"></span>
         <br>
         <br>
