--- a/HTML-CSS/sign-in.html
+++ b/HTML-CSS/sign-in.html
@@ -20,7 +20,7 @@
         <h6 class="p-2">Sign in to continue</h6>
         <table >
             <tr>
-                <td class="col-sm-12"><input type="email" class="form-control" placeholder="Email Address"></td>
+                <td class="col-sm-12"><input type="email" class="form-control" placeholder="Email Address/Username"></td>
                 <td><a href="sign-in2.html"><button class="btn btn-info" type="submit">Submit</button></a></td>
             </tr>
         </table>
