--- a/HTML-CSS/with-account.html
+++ b/HTML-CSS/with-account.html
@@ -28,7 +28,7 @@
                             <a class="dropdown-item" href="my-list.html">My List</a>
                             <a class="dropdown-item" href="downloads.html">Downloads</a>
                             <a class="dropdown-item" href="settings.html">Settings</a>
-                            <a class="dropdown-item" href="log-in.html">Log Out</a>
+                            <a class="dropdown-item" href="landing.html">Log Out</a>
                         </div>
                     </div> &nbsp; &nbsp; &nbsp;
                     <a class="nav-link" href="with-account.html">Home</a> &nbsp; &nbsp; &nbsp;
